# attendance_worker

./: .gitignore  Cargo.toml  README.md  run.sh  setup.sh
src/: database.rs  google.rs  main.rs  request.rs  scrape.rs  seri.rs  time.rs
