[package]
name = "attendance_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
mongodb = "2.8"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
dotenvy = "0.15"
chrono = "0.4"
scraper = "0.25.0"
